# secsecxa

./: .env.example  .gitignore  BACKEND_README.md  BACKEND_SETUP_COMPLETE.md  CHANGELOG.md  DECISION_TREE_FLOWCHART.md  Dockerfile  Dockerfile.frontend  FILES_CREATED.md  ILP_IMPLEMENTATION_SUMMARY.md  ILP_README.md  IMPLEMENTATION_SUMMARY.md  MEETING_PREPARATION_GUIDE.md  NETWORK_TOOLS_DOCUMENTATION.md  POST_MEETING_JOURNAL.md  QUICKSTART.md  QUICK_REFERENCE_CARD.md  README.md  SETUP.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  requirements.txt  run_backend.sh  run_mvp.sh  verify_setup.py
app/: main.py
backend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  QUICKSTART.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  run.sh  test_api.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/: auth.py  executions.py  tools.py
backend/app/core/: config.py  logging.py  security.py
backend/app/data/: tool_definitions.json
backend/app/db/: session.py
backend/app/models/: __init__.py  execution.py  tool.py  user.py
backend/app/schemas/: __init__.py  execution.py  tool.py  user.py
backend/app/services/: celery_worker.py  execution_engine.py
backend/tests/: conftest.py  test_auth.py  test_executions.py  test_integration.py  test_tools.py
components/: CarmenSimulator.tsx  CipherTool.tsx  GroundingTool.tsx  MemoryPalace.tsx  SpunkEmulator.tsx  SystemPromptViewer.tsx  TabButton.tsx  ToTVisualizer.tsx
docs/: architecture.md  (+3 more)
(+92 files in other folders)
