[tool.poetry]
name = "cybersec-toolkit-backend"
version = "1.0.0"
description = "CyberSec Toolkit Backend with Auth and Execution Engine"
authors = ["CyberSec Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
websockets = "^12.0"
aiofiles = "^23.2.1"
python-nmap = "^0.7.1"
scapy = "^2.5.0"
dnspython = "^2.4.2"
python-whois = "^0.8.0"
pyOpenSSL = "^23.3.0"
cryptography = "^41.0.7"
redis = "^5.0.1"
celery = "^5.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
